--- a/client/src/pages/adminDashboardPages/roomManagement/AddRoom.css
+++ b/client/src/pages/adminDashboardPages/roomManagement/AddRoom.css
@@ -1,4 +1,4 @@
 .ant-select-selector {
   padding: 7px !important;
-  background-color: #e0f7fa !important;
+  background-color: white !important;
 }
