--- a/client/src/components/aboutUs/HeroSection.css
+++ b/client/src/components/aboutUs/HeroSection.css
@@ -14,7 +14,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.604); /* Black color with 50% opacity */
+  background-color: rgba(0, 0, 0, 0.604);
   z-index: 1;
 }
 
